[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui_elements/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_elements/ActionRemapButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui_elements/TitleWindow.tscn" type="PackedScene" id=3]
[ext_resource path="res://Theme.tres" type="Theme" id=4]
[ext_resource path="res://screens/OptionsKeyBinding.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="ButtonGroup" id=4]

[node name="OptionsKeyBinding" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="RemapButtonGroupKeyBoard" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -267.5
margin_right = 636.0
margin_bottom = 267.5
custom_styles/focus = SubResource( 1 )
disabled = true
group = SubResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="RemapButtonGroupKeyBoard"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionsList" type="VBoxContainer" parent="RemapButtonGroupKeyBoard/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 616.0
margin_bottom = 544.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList"]
margin_right = 596.0
margin_bottom = 37.0
text = "BTNMAPPINGHELP"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList"]
margin_top = 52.0
margin_right = 596.0
margin_bottom = 89.0
custom_constants/separation = 24
alignment = 1

[node name="CheckBox" type="CheckBox" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/HBoxContainer"]
margin_left = 109.0
margin_right = 292.0
margin_bottom = 37.0
custom_styles/focus = SubResource( 3 )
group = SubResource( 4 )
text = "KEYBOARD"

[node name="CheckBox2" type="CheckBox" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/HBoxContainer"]
margin_left = 316.0
margin_right = 486.0
margin_bottom = 37.0
custom_styles/focus = SubResource( 3 )
group = SubResource( 4 )
text = "GAMEPAD"

[node name="HSeparator" type="HSeparator" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList"]
margin_top = 104.0
margin_right = 596.0
margin_bottom = 108.0

[node name="ActionRemapRow3" type="HBoxContainer" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList"]
margin_top = 123.0
margin_right = 596.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionName" type="Label" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow3"]
margin_right = 296.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MOVE_U"
align = 1
valign = 1

[node name="RemapButton" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow3" instance=ExtResource( 2 )]
margin_left = 300.0
margin_right = 596.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = SubResource( 2 )

[node name="ActionRemapRow4" type="HBoxContainer" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList"]
margin_top = 175.0
margin_right = 596.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionName" type="Label" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow4"]
margin_right = 296.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MOVE_D"
align = 1
valign = 1

[node name="RemapButton" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow4" instance=ExtResource( 2 )]
margin_left = 300.0
margin_right = 596.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = SubResource( 2 )
action = "ui_down"

[node name="ActionRemapRow" type="HBoxContainer" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList"]
margin_top = 227.0
margin_right = 596.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionName" type="Label" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow"]
margin_right = 296.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MOVE_L"
align = 1
valign = 1

[node name="RemapButton" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow" instance=ExtResource( 2 )]
margin_left = 300.0
margin_right = 596.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = SubResource( 2 )
action = "ui_left"

[node name="ActionRemapRow2" type="HBoxContainer" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList"]
margin_top = 279.0
margin_right = 596.0
margin_bottom = 316.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionName" type="Label" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow2"]
margin_right = 296.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MOVE_R"
align = 1
valign = 1

[node name="RemapButton" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow2" instance=ExtResource( 2 )]
margin_left = 300.0
margin_right = 596.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = SubResource( 2 )
action = "ui_right"

[node name="ActionRemapRow5" type="HBoxContainer" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList"]
margin_top = 331.0
margin_right = 596.0
margin_bottom = 368.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionName" type="Label" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow5"]
margin_right = 296.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ACCEPT"
align = 1
valign = 1

[node name="RemapButton" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow5" instance=ExtResource( 2 )]
margin_left = 300.0
margin_right = 596.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = SubResource( 2 )
action = "ui_accept"

[node name="ActionRemapRow8" type="HBoxContainer" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList"]
margin_top = 383.0
margin_right = 596.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionName" type="Label" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow8"]
margin_right = 296.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ACCEPT2"
align = 1
valign = 1

[node name="RemapButton" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow8" instance=ExtResource( 2 )]
margin_left = 300.0
margin_right = 596.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = SubResource( 2 )
action = "ui_alternative_action"

[node name="ActionRemapRow6" type="HBoxContainer" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList"]
margin_top = 435.0
margin_right = 596.0
margin_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionName" type="Label" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow6"]
margin_right = 296.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CANCEL"
align = 1
valign = 1

[node name="RemapButton" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow6" instance=ExtResource( 2 )]
margin_left = 300.0
margin_right = 596.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = SubResource( 2 )
action = "ui_cancel"

[node name="ActionRemapRow7" type="HBoxContainer" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList"]
margin_top = 487.0
margin_right = 596.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionName" type="Label" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow7"]
margin_right = 296.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Combo"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow7"]
margin_left = 300.0
margin_right = 596.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="RemapButton" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow7/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 71.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = SubResource( 2 )
clip_text = true
action = "combo1"

[node name="RemapButton2" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow7/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 75.0
margin_right = 146.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = SubResource( 2 )
clip_text = true
action = "combo2"

[node name="RemapButton3" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow7/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 150.0
margin_right = 221.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = SubResource( 2 )
clip_text = true
action = "combo3"

[node name="RemapButton4" parent="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/ActionRemapRow7/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 225.0
margin_right = 296.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = SubResource( 2 )
clip_text = true
action = "combo4"

[node name="VBxCustomMapping" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -622.0
margin_top = -107.5
margin_right = -48.0
margin_bottom = 107.5
grow_horizontal = 0
grow_vertical = 2
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBxCustomMapping"]
margin_right = 574.0
margin_bottom = 37.0
custom_constants/separation = 19

[node name="Label" type="Label" parent="VBxCustomMapping/HBoxContainer"]
margin_right = 284.0
margin_bottom = 37.0
text = "CUSTOM_MAPPING"

[node name="HBoxContainer" type="HBoxContainer" parent="VBxCustomMapping/HBoxContainer"]
margin_left = 303.0
margin_right = 551.0
margin_bottom = 37.0

[node name="Button" type="Button" parent="VBxCustomMapping/HBoxContainer/HBoxContainer"]
margin_right = 123.0
margin_bottom = 37.0
text = "APPLY"

[node name="Button2" type="Button" parent="VBxCustomMapping/HBoxContainer/HBoxContainer"]
margin_left = 127.0
margin_right = 248.0
margin_bottom = 37.0
text = "RESET"

[node name="TextEdit" type="TextEdit" parent="VBxCustomMapping"]
margin_top = 45.0
margin_right = 574.0
margin_bottom = 215.0
size_flags_vertical = 3
wrap_enabled = true
caret_blink = true

[node name="TitleWindow" parent="." instance=ExtResource( 3 )]
title = "CONFREMAP"

[connection signal="pressed" from="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/HBoxContainer/CheckBox" to="." method="_on_ChangeInputMode" binds= [ "keyboard" ]]
[connection signal="pressed" from="RemapButtonGroupKeyBoard/MarginContainer/ActionsList/HBoxContainer/CheckBox2" to="." method="_on_ChangeInputMode" binds= [ "gamepad" ]]
[connection signal="pressed" from="VBxCustomMapping/HBoxContainer/HBoxContainer/Button" to="." method="_on_ApplyMapping"]
[connection signal="pressed" from="VBxCustomMapping/HBoxContainer/HBoxContainer/Button2" to="." method="_on_ResetMapping"]
[connection signal="btn_back_pressed" from="TitleWindow" to="." method="_on_TitleWindow_btn_back_pressed"]
